[api][ruby] Fix passwordreset.authorizables array type config and tests. #20
